[package]
name = "markdown-it-block-spoiler"
version = "1.0.0"
edition.workspace = true
license = "GPL-3.0"
authors = ["SleeplessOne1917"]
description = "A markdown-it plugin for parsing block spoilers"
repository = "https://github.com/LemmyNet/lemmy-markdown-it-plugins"
keywords = ["markdown", "markdown-it", "spoiler", "plugin"]
categories = ["encoding", "parsing", "text-processing"]


[dependencies]
markdown-it.workspace = true
itertools = "0.13"

[dev-dependencies]
rstest.workspace = true
