[package]
name = "markdown-it-sup"
version = "1.0.0"
edition.workspace = true
license = "GPL-3.0"
authors = ["SleeplessOne1917"]
description = "A markdown-it plugin for parsing superscripts"
repository = "https://github.com/LemmyNet/lemmy-markdown-it-plugins"
keywords = ["markdown", "markdown-it", "superscript", "plugin"]
categories = ["encoding", "parsing", "text-processing"]

[dependencies]
markdown-it.workspace = true

[dev-dependencies]
rstest.workspace = true
